Add UserName Support

--- a/src/IdentityServer/Views/Shared/_Layout.cshtml
+++ b/src/IdentityServer/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@ limitations under the License.
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Host</title>
+    <title>@ViewData["Title"] - IdentityServer</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -44,7 +44,7 @@ limitations under the License.
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">IdentityServer4</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">IdentityServer</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -58,7 +58,7 @@ limitations under the License.
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - Host</p>
+            <p>&copy; 2016 - IdentityServer</p>
         </footer>
     </div>
 
